# energy-binding-rs

./: Cargo.toml  README.md
afb-binding/: Cargo.toml
afb-binding/etc/: binder-energy.json  binder-test.sh  binding-energy.json  binding-modbus.json  binding-test.sh  control-energy-sdm72d.json  energy-binder.json  energy-binding.json  energy-test.sh  start-binder.sh
afb-binding/src/: binding.rs  libso.rs  verbs.rs
afb-types/src/: engy-types.rs  libso.rs
energy-lib/: Cargo.toml
energy-lib/capi/: build.rs
energy-lib/src/: libso.rs  manager.rs  types.rs
